Add Schnellaktionen and letzte aktivitäten toolsbox

--- a/websites/sapienz/intranet-fischer.html
+++ b/websites/sapienz/intranet-fischer.html
@@ -33,8 +33,10 @@
       Sapienz
     </div>
     <div class="right top settings padding2 mainColor pointer" onclick="window.location.href = 'index.html';">
-      INTRANET FISCHER
+      <br>
+      INTRANET R. FISCHER
       <i class="material-icons grey small valignText">settings</i>
+      <i class="material-icons clear small valignText">settings</i>
       <br>
       <span class="small grey">
         Logout | Einstellungen
@@ -61,36 +63,97 @@
 
   <div class="website">
     <div class="userMenu">
-      <h3>Schnellaktionen</h3>
+      <h3>
+        Schnellaktionen
+        <i class="material-icons mainColor valignText">bolt</i>
+      </h3>
+
+      <div class="box">
+        <div class="title">Anfrage aufgeben</div>
+        <div class="content">
+          <ul>
+            <li>IT Support</li>
+            <li>Analytics Auszug <i class="material-icons mainColor small valignText">open_in_new</i></li>
+            <li>Systeme: L &middot; SPZ</li>
+            <li>Formulare div.</li>
+            <li>Parkieren</li>
+            <li>Anmeldung Besucher</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="title">
+          Raumreservation
+          <i class="material-icons mainColor small valignText">add_circle</i>
+        </div>
+        <div class="content">
+          <span class="italics grey">Aktuell keine Reservationen</span>
+        </div>
+      </div>
+      
+      <div class="tile mainColorBg">
+        <i class="material-icons white valignText">edit_calendar</i>
+      </div>
+      <div class="tile mainColorBg">
+        <i class="material-icons white valignText">room_preferences</i>
+      </div>
+      <div class="tile mainColorBg">
+        <i class="material-icons white valignText">queue_play_next</i>
+      </div>
+      <div class="tile mainColorBg">
+        <i class="material-icons white valignText">pending</i>
+      </div>
+
       <br>
-      Aktion 1<br>
-      Aktion 2<br>
-      Aktion 3<br>
-      Aktion 4<br>
-      Aktion 5<br>
-      Aktion 6<br>
-      Aktion 7<br>
-      Aktion 8<br>
-      Aktion 9<br>
-      Aktion 10<br>
-      Aktion 11<br>
-      Aktion 12<br>
-      Aktion 13<br>
+      <div class="grey small">
+        [2238-8] Setup &middot; A &middot; B &middot; C
+      </div>
     </div>
 
     <div class="tools">
-      <h3>Letzte Aktivitäten</h3>
+      <h3>
+        Letzte Aktivitäten
+        <i class="material-icons mainColor valignText">dynamic_form</i>
+      </h3>
+
+      <div class="box">
+        <div class="content grey small ellipsis">
+          2021-01-10 18:43:05.916563+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Has work (allow: 1, force: 1) for IMAPtrackbox [exists: 732, unseen: 0, UID next: 3565, UID validity: 1385501588, highest modseq: 5461] and local data [exists: 732, unseen: 0, UID next: 3565, UID validity: 1385501588, highest modseq: 5461], can trust exists: 1, supports modseq: 1<br>
+          2021-01-10 18:43:05.916575+0100 0x16cd30b  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Gesendet] Operation { changed since: 1749, highest UID: 1280} created<br>
+          2021-01-10 18:43:05.916884+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Updated -- _messageNumbersNeedingUIDs (732): 1:732; _messageNumbersNeedingSkeletons (0): (null); _uidsNeedingSkeletons (0): (null), localHighestUIDToCheck: 3563<br>
+          2021-01-10 18:43:05.916942+0100 0x16cd75e  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:IMAPConnection] [goethe.metanet.ch] Wrote: 3027.11192 UID FETCH 1:1280 (FLAGS UID) (CHANGEDSINCE 1749 VANISHED)<br>
+          2021-01-10 18:43:05.917026+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Operation {} finished<br>
+          2021-01-10 18:43:05.917181+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Recalculated priorities - network: 24, persistence: 0<br>
+          2021-01-10 18:43:05.917256+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track] Assigning active tasks with selected trackboxes: Eingang, Gesendet<br>
+          2021-01-10 18:43:05.916575+0100 0x16cd30b  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Gesendet] Operation { changed since: 1749, highest UID: 1280} created<br>
+          2021-01-10 18:43:05.916884+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Updated -- _messageNumbersNeedingUIDs (732): 1:732; _messageNumbersNeedingSkeletons (0): (null); _uidsNeedingSkeletons (0): (null), localHighestUIDToCheck: 3563<br>
+          2021-01-10 18:43:05.916942+0100 0x16cd75e  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:IMAPConnection] [goethe.metanet.ch] Wrote: 3027.11192 UID FETCH 1:1280 (FLAGS UID) (CHANGEDSINCE 1749 VANISHED)<br>
+          2021-01-10 18:43:05.917026+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Operation {} finished<br>
+          2021-01-10 18:43:05.917181+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Recalculated priorities - network: 24, persistence: 0<br>
+          2021-01-10 18:43:05.917256+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track] Assigning active tasks with selected trackboxes: Eingang, Gesendet<br>
+          2021-01-10 18:43:05.916575+0100 0x16cd30b  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Gesendet] Operation { changed since: 1749, highest UID: 1280} created<br>
+          2021-01-10 18:43:05.916884+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Updated -- _messageNumbersNeedingUIDs (732): 1:732; _messageNumbersNeedingSkeletons (0): (null); _uidsNeedingSkeletons (0): (null), localHighestUIDToCheck: 3563<br>
+          2021-01-10 18:43:05.916942+0100 0x16cd75e  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:IMAPConnection] [goethe.metanet.ch] Wrote: 3027.11192 UID FETCH 1:1280 (FLAGS UID) (CHANGEDSINCE 1749 VANISHED)<br>
+          2021-01-10 18:43:05.917026+0100 0x16cd75d  Default     0x0         781    14   track: (IMAP) [com.EAWCORP.track:guideyncActivity] [track - Eingang] Operation {} finished<br>
+          [...]
+        </div>
+      </div>
       <br>
-      Log 1<br>
-      Log 2<br>
-      Log 3<br>
-      Log 4<br>
-      Log 5<br>
-      Log 6<br>
-      Log 7<br>
-      Log 8<br>
+      <i class="material-icons grey small valignText">vpn_key</i>
+      <i class="material-icons grey small valignText">developer_mode</i>
+      <i class="material-icons grey small valignText">analytics</i>
+      <i class="material-icons mainColor small valignText">stacked_line_chart</i>
+      <i class="material-icons grey small valignText">schema</i>
     </div>
 
+    <!-- KEMP tile ideen -->
+    <!-- Dateibrowser LOKAL -->
+    <!-- Dateibrowser CLOUD -->
+    <!-- Server ftps://fischer.sapienz.ch -->
+    <!-- Online Formulare -->
+
+    <!-- FILEBROWSER -->
     <div class="fileBrowser">
       <div class="filelist path">
         Dateibrowser 
@@ -1087,7 +1150,7 @@
           
           <tr>
             <td><i class="material-icons mainColor small valignText">folder_open</i></td>
-            <td>iCloud Drive</td>
+            <td>Cloud Server</td>
             <td>-</td>
             <td>RF</td>
             <td>rwxr-xr-x (755)</td>
