--- a/websites/sapienz/index.html
+++ b/websites/sapienz/index.html
@@ -17,6 +17,7 @@
   <div class="preload">
     <img src="imgs/index.jpg" alt="" />
     <img src="imgs/medien.jpg" alt="" />
+    <img src="imgs/karriere.jpg" alt="" />
   </div>
 
 
