--- a/websites/sapienz/medien.html
+++ b/websites/sapienz/medien.html
@@ -16,6 +16,12 @@
   <!-- JS of UNIK on iFrame onload= -->
   <div id="iframeSpoofUrl" class="hide">https://www.sapienz.ch/media</div>
   
+  <!-- PRELOAD -->
+  <div class="preload">
+    <img src="imgs/index.jpg" alt="" />
+    <img src="imgs/medien.jpg" alt="" />
+    <img src="imgs/karriere.jpg" alt="" />
+  </div>
   
   <!-- <h1>METIS WEBSITE</h1>  -->
   <div class="website header">
